--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ beautifulsoup4==4.12.2
 Django==5.0.1
 djangorestframework==3.14.0
 frozenlist==1.4.1
+gunicorn==21.2.0
 html5lib==1.1
 idna==3.6
 multidict==6.0.4
+packaging==23.2
 pytz==2023.3.post1
 six==1.16.0
 soupsieve==2.5
